@@ -428,7 +428,7 @@ public class SimEditor extends EditorPart implements NodeListener {
 			        }
 			    }
 			    
-			    return new Integer(index);
+			    return Integer.valueOf(index);
 			} else {
 			    return n.getValueString();
 			}
